...
            self.presentationController?.present(self.imagePickerController, animated: true)
        }
        return alertAction
    }

    func present(from sourceView: UIView) {
        let alertController = UIAlertController(title: "사진을 어디서 가져올까요?", message: nil, preferredStyle: .actionSheet)

        if let photoLibraryAction = sourceTypeSelectionAlertAction(for: .photoLibrary, title: "사진첩") {
            alertController.addAction(photoLibraryAction)
        } else if let savedPhotosAlbumAction = sourceTypeSelectionAlertAction(for: .savedPhotosAlbum, title: "저장된 사진 앨범") {
            alertController.addAction(savedPhotosAlbumAction)
        } else if let cameraAction = sourceTypeSelectionAlertAction(for: .camera, title: "카메라 촬영") {
            alertController.addAction(cameraAction)
        }
...
